@@ -1,3 +1,8 @@
+2010-07-25  Karl Berry  <karl@gnu.org>
+
+	* util/htmlxref.cnf: new file.
+	* util/Makefile.am (dist_pkgdata_DATA): add it.
+
 2010-07-24  Karl Berry  <karl@gnu.org>
 
 	* doc/texinfo.txi (Generic translator texi2any/makeinfo): rename
